# doolittle-oss

./: .gitignore  CONTRIBUTING.md  MANIFESTO.md  README.md  ULTRATHINK_AUDIT.md  pyproject.toml  scaffold_doolittle.py
.github/workflows/: test.yml
apps/petsorcery-web/: README.md  package.json
apps/vetsorcery-integration/: README.md
datasets/: CONTRIBUTING.md  README.md
datasets/grimace/: metadata.json
research/papers/: README.md
